RESOLVED FIXED34329
Cannot inspect Web Inspector in QtLauncher
https://bugs.webkit.org/show_bug.cgi?id=34329
Summary Cannot inspect Web Inspector in QtLauncher
Jessie Berlin
Reported 2010-01-29 06:35:48 PST
The only option in the context menu that appears when right-clicking inside the Web Inspector is to Reload. It would very helpful to those who want to work on the Web Inspector while living on the Linux platform for it to be possible to inspect the Web Inspector (as can be done inside Safari on Mac OS X and Windows). Briefly looking into the code for the QWebInspector, it appears that it sub-classes QWidget and is just using the default context menus for that. Is there a way to get at the QWebPage that contains the code for the Web Inspector (if there is one)?
Attachments
Patch to enable inspecting the web inspector in the QtLauncher (1.35 KB, patch)
2010-02-01 20:17 PST, Jessie Berlin
zecke: review-
Jessie Berlin
Comment 1 2010-02-01 20:17:36 PST
Created attachment 47903 [details] Patch to enable inspecting the web inspector in the QtLauncher
Holger Freyther
Comment 2 2010-02-02 01:01:12 PST
Comment on attachment 47903 [details] Patch to enable inspecting the web inspector in the QtLauncher I love the patch. It sucks to have comments on a one liner. So if you fix them you can land the patch rightaway. > + Need a short description and bug URL (OOPS!) Please remove this. You have done everything that is needed for this. > InspectorClientWebPage(QObject* parent = 0) > - : QWebPage(parent) > + : QWebPage(parent) Even if you fix the style, we normally tend to do this in two separate commits. You have my rubber stamp to fix this style issue with the code.
Jessie Berlin
Comment 3 2010-02-02 05:01:31 PST
(In reply to comment #2) > (From update of attachment 47903 [details]) > I love the patch. It sucks to have comments on a one liner. So if you fix them > you can land the patch rightaway. > So r=you on the first patch which just removes the line setting the DeveloperExtraEnabled setting and then rs=you on a second patch that fixes the style? Or do you want me to repost the first patch here? > > > + Need a short description and bug URL (OOPS!) > > Please remove this. You have done everything that is needed for this. Whoops! Sorry about that. > > > InspectorClientWebPage(QObject* parent = 0) > > - : QWebPage(parent) > > + : QWebPage(parent) > > Even if you fix the style, we normally tend to do this in two separate commits. > You have my rubber stamp to fix this style issue with the code.
Jessie Berlin
Comment 4 2010-02-02 07:27:25 PST
Enabled inspecting the web inspector in the qt launcher: http://trac.webkit.org/changeset/54233 Will commit the style change next.
Jessie Berlin
Comment 5 2010-02-02 07:36:59 PST
(In reply to comment #4) > Enabled inspecting the web inspector in the qt launcher: > > http://trac.webkit.org/changeset/54233 > > Will commit the style change next. Committed style change: http://trac.webkit.org/changeset/54236 Closing bug.
Note You need to log in before you can comment on or make changes to this bug.