2010-02-01  Jessie Berlin  <jberlin@webkit.org>

Reviewed by Holger Freyther.

        [Qt] Enable inspecting the Web Inspector in QtLauncher

        https://bugs.webkit.org/show_bug.cgi?id=34329

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientWebPage::InspectorClientWebPage):
        Allow the DeveloperExtrasEnabled setting to default to true for the page containing the Web Inspector.


Canonical link: https://commits.webkit.org/45577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54233 268f45cc-cd09-0410-ab3c-d52691b4dbfc